correct discount positioning on small screens

--- a/scss/components/barriers/_colour-trial-grid.scss
+++ b/scss/components/barriers/_colour-trial-grid.scss
@@ -62,7 +62,7 @@
         @include oTypographySans($scale: 0, $line-height: 17px);
         @include oGridRespondTo($until: M) {
             top: -70px;
-            right: 20px;
+            right: 10px;
         }
         @include oGridRespondTo(L) {
             @include oTypographySans($scale: -2, $line-height: 12px);
